--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,24 @@
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+/* Utility to hide native scrollbars while keeping scroll functionality */
+.scrollbar-hide {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; 
+}
+
+html, body {
+    -ms-overflow-style: none; 
+    scrollbar-width: none; 
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background: transparent;
+}
